<resources>
    <string name="app_name">PassData</string>
    <string name="contact">Profile</string>
    <string name="form_name">Name</string>
    <string name="form_Number">Age</string>
    <string name="form_Bio">Bio</string>
    <string name="form_PhoneNumber">Phone No</string>
    <string name="form_Location">Location</string>
    <string name="form_button">Submit</string>
    <string name="details">Your Details</string>
</resources>