<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textSize="36sp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_name"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_name"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_Number"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_Number"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/MBio"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:text="@string/form_Bio"
        android:textColor="#06A831"
        android:textSize="24sp"
        tools:text="@string/form_Bio" />

    <TextView
        android:id="@+id/tvBio"
        android:layout_width="379dp"
        android:layout_height="32dp"
        android:text="@string/form_Bio"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/Phno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_PhoneNumber"
        android:textColor="#BD1C1C"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvphno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_PhoneNumber"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_Location"
        android:textColor="#4CAF50"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvlocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_Location"
        android:textSize="24sp" />
</LinearLayout>